argocd-main/resources/uat/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauthproxy
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: oauth-proxy
