argocd-main/resources/uat/oauth2-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-oauth-proxy
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-resources
  hostnames:
      - app.gw.k8s.sh.aban.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauthproxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /oauth2/callback
